--- a/todo/templates/todo/login.html
+++ b/todo/templates/todo/login.html
@@ -1,13 +1,41 @@
 {% extends 'base.html' %}
 
-{% block content%}
+{% block content %}
 
-<h1>Login</h1>
-<h2>{{errMsg}}</h2>
-<form method="post" action="">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit"> Login</button>
-</form>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-5">
+        <h2>Login</h2>
+    </div>
+</div>
 
-{% endblock%}
+<div class="row justify-content-center mt-5">
+    <div class="col-md-5">
+        {% if error %}
+            <div class="alert alert-danger">
+                {{error}}
+            </div>
+        {% endif %}
+    </div>
+
+    <form method="post" action="">
+        {% csrf_token%}
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input required type="text" class="form-control" name="username" id="username" aria-describedby="usernameHelp">
+            <small class="form-text text-muted" id="usernameHelp">Your username must be unique.</small>
+        </div>
+
+        <div class="form-group">
+            <label for="password1">Password</label>
+            <input required type="password" class="form-control" name="password1" id="password1" >
+        </div>
+
+        <button class="btn btn-primary" type="submit">Login</button>
+    </form>
+
+    <div class="text-center">
+        Need an account? <a href="{% url 'signupuser' %}">Sign Up</a>
+    </div>
+</div>
+
+{% endblock %}
